[package]
name = "makepad-compositor"
version = "0.1.0"
edition = "2021"
description = "Projected textured quads and offscreen surfaces for Makepad"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/makepad/makepad/"
repository = "https://github.com/makepad/makepad/"

[dependencies]
makepad-draw = { path = "../draw", version = "2.0.0" }
