[package]
name = "makepad-xr"
version = "1.0.0"
authors = ["Makepad <info@makepad.nl>"]
edition = "2021"
description = "Reusable XR scene components for Makepad"
license = "MIT OR Apache-2.0"

[features]
lz4_force_scalar = ["makepad-lz4/force-scalar"]

[dependencies]
makepad-lz4 = { path = "../libs/lz4", version = "0.1.0" }
makepad-widgets = { path = "../widgets", version = "2.0.0" }
makepad-gltf = { path = "../libs/gltf", version = "1.0.0" }
makepad-splat = { path = "../libs/splat", version = "1.0.0" }
rapier3d = { path = "../libs/rapier/crates/rapier3d", default-features = false, features = ["dim3", "f32"] }
