[package]
name = "makepad-example-cad"
version = "0.1.0"
authors = ["Makepad <info@makepad.nl>"]
edition = "2021"
description = "Generative CAD example with live scripting"
license = "MIT OR Apache-2.0"

[dependencies]
makepad-widgets = { path = "../../widgets", version = "2.0.0" }
makepad-code-editor = { path = "../../code_editor" }
makepad-xr = { path = "../../xr", version = "1.0.0" }
makepad-csg = { path = "../../libs/csg/csg", default-features = false }
