[package]
name = "makepad-example-compositor"
version = "1.0.0"
edition = "2021"

[dependencies]
makepad-widgets = { path = "../../widgets", version = "2.0.0" }
makepad-compositor = { path = "../../compositor", version = "0.1.0" }

[dev-dependencies]
makepad-zune-png = { path = "../../libs/zune/zune-png", version = "0.5.1" }
