[package]
name = "makepad-cef"
version = "0.1.0"
edition = "2021"
build = "build.rs"
license = "MIT OR Apache-2.0"

[dependencies]
libloading = { path = "../vulkan/libloading", version = "0.8.9" }

[target.'cfg(target_os = "macos")'.dependencies]
makepad-objc-sys = { path = "../objc-sys", version = "1.0.0" }
