[package]
name = "makepad-sparse-voxels"
version = "0.1.0"
authors = ["Makepad <info@makepad.nl>"]
edition = "2021"
description = "Stable sparse chunk storage for incremental voxel worlds"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/makepad/makepad/"
repository = "https://github.com/makepad/makepad/"

[features]
default = []
enhanced-determinism = ["dep:indexmap"]

[dependencies]
hashbrown = { version = "0.16.1", default-features = false, features = ["default-hasher"], path = "../vulkan/hashbrown" }
foldhash = { version = "0.2.0", default-features = false, path = "../vulkan/foldhash" }
indexmap = { version = "2", optional = true, default-features = false, path = "../vulkan/indexmap" }
